--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,14 @@
 	</properties>
 
 	<dependencies>
+	<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+<dependency>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-core</artifactId>
+    <version>2.13.0</version>
+    <scope>test</scope>
+</dependency>
+	
 	<!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
 <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 <dependency>
