--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,30 @@
     <version>2.13.0</version>
     <scope>test</scope>
 </dependency>
-	
+	<!-- https://mvnrepository.com/artifact/org.glassfish.jersey.core/jersey-server -->
+<dependency>
+    <groupId>org.glassfish.jersey.core</groupId>
+    <artifactId>jersey-server</artifactId>
+    <version>2.26</version>
+</dependency>
+
+	<!-- https://mvnrepository.com/artifact/org.glassfish.jersey.containers/jersey-container-servlet-core -->
+<dependency>
+    <groupId>org.glassfish.jersey.containers</groupId>
+    <artifactId>jersey-container-servlet-core</artifactId>
+    <version>2.26</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/org.glassfish.grizzly/grizzly-http-server -->
+<!-- https://mvnrepository.com/artifact/org.glassfish.jersey.containers/jersey-container-grizzly2-http -->
+<!-- https://mvnrepository.com/artifact/com.sun.grizzly/grizzly-http -->
+<!-- https://mvnrepository.com/artifact/com.sun.grizzly/grizzly-http -->
+<!-- https://mvnrepository.com/artifact/org.glassfish.jersey.containers/jersey-container-grizzly2-http -->
+<dependency>
+    <groupId>org.glassfish.jersey.containers</groupId>
+    <artifactId>jersey-container-grizzly2-http</artifactId>
+    <version>2.26</version>
+</dependency>
+
 	<!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
 <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 <dependency>
